hphp/hack/test/typecheck/strict_switch/dynamic.php.new_exhaustivity.exp
ERROR: File "dynamic.php", line 15, characters 3-46:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "dynamic.php", line 15, characters 11-12:
  The scrutinee has type `dynamic` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
ERROR: File "dynamic.php", line 24, characters 3-48:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "dynamic.php", line 24, characters 11-12:
  The scrutinee has type `?dynamic` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
